Fix spacing mistake

--- a/src/_5g/globals.scss
+++ b/src/_5g/globals.scss
@@ -93,7 +93,7 @@
   }
 
   @media screen and (max-width: 500px) {
-    margin: 90vw;
+    width: 90vw;
   }
 }
 
